# usbvhci

./: CMakeLists.txt  businterface.c  fdo.c  guid.c  pagefile.c  pdo.c  power.c  usbvhci.c  usbvhci.h  wmi.c
usbvhci/: usbvhci.inf  usbvhci.sln  usbvhci.vcxproj  usbvhci.vcxproj.filters
